update midterm pdf and tex documents

--- a/MidTerm.tex
+++ b/MidTerm.tex
@@ -445,10 +445,19 @@ disease prevalence and is defined by
 
 \vspace{1pc}
 $\bullet$ narrow-sense heritability:
+the narrow sense heritability ( $h^2 $) is defined as the proportion of the phenotypic variance that is explained by just the additive genetic effects,
 
+	$ h^2 = V_A / Var(Y)
+	$ \\
+	The advantage of the narrow sense heritability is that it can be directly estimated from the phenotypic data on relatives.
 
 \vspace{1pc}
 $\bullet$ broad-sense heritability:
+the broad sense heritability of a trait is defined as the proportion of the overall phenotypic variation in the trait that is attributable to genetic comonents, e.g., \\
+	$ Var(G)/Var(Y).
+	$ \\
+	
+
 
 
 \vspace{1pc}
@@ -507,8 +516,10 @@ Describe how you would go about estimating narrow-sense heritability
 
 
 \vspace{2pc}
-6. What is the goal of segregation analysis?
-
+6. What is the goal of segregation analysis? \\
+The idea of segregation analysis is to test and to compare different statistical models
+formally, using phenotypic data on related individuals, with the goal of identifying
+the genetic model that describes the data ‘best’.
 
 \vspace{2pc}
 7. Text, section 4.5, problems 1-5, 11 and 12.
