add compling files for MidTerm.pdf

--- a/MidTerm.tex
+++ b/MidTerm.tex
@@ -4,7 +4,7 @@
 
 
 
-\centerline{\sc \large BioStats 710 Midterm}
+\centerline{\sc \large BioStats 710 MidTerm}
 \vspace{1pc}
 \centerline{\sc Some Stuff I Wish Would be Useful}
 \vspace{1pc}
@@ -23,6 +23,7 @@ $\bullet$ trait:
 a genetically determined characteristic; A trait is a notable feature or quality in a person. Each of us has a different combination of traits that makes us unique. 
 Traits are passed from generation to generation.\vspace{0.1in}
 
+
 $\bullet$ genetic marker: 
 A genetic marker is a gene or DNA sequence with a known location on a chromosome that can be used to identify individuals or species. It can be described as a variation (which may arise due to mutation or alteration in the genomic loci) that can be observed. \vspace{0.1in}
 
@@ -30,157 +31,196 @@ A genetic marker is a gene or DNA sequence with a known location on a chromosome
 $\bullet$ linkage analysis: 
 Study aimed at establishing linkage between genes. Today linkage analysis serves as a way of gene-hunting and genetic testing. Linkage is the tendency for genes and other genetic markers to be inherited together because of their location near one another on the same chromosome.
 
+
 \vspace{0.1in}
 $\bullet$ Mendelian disorder: 
 a genetic disease, showing a mendelian pattern of inheritance, and caused by a single mutation in the structure of DNA, which causes a single basic defect that has some pathological consequence or consequences.
+
 
 \vspace{0.1in}
 $\bullet$ penetrance: 
 Penetrance in genetics is the proportion of individuals carrying a particular variant of a gene (allele or genotype) that also expresses an associated trait (phenotype)
 
+
 \vspace{0.1in}
 $\bullet$ heterozygote: 
 an individual having two different alleles of a particular gene or genes, and so giving rise to varying offspring.
+
 
 \vspace{0.1in}
 $\bullet$ polymorphism: 
 Genetic polymorphism is the occurrence in the same population of two or more alleles at one locus, each with appreciable frequency
 
+
 \vspace{0.1in}
 $\bullet$ gene mapping: 
 Gene mapping describes the methods used to identify the locus of a gene and the distances between genes. The essence of all genome mapping is to place a collection of molecular markers onto their respective positions on the genome. 
+
 
 \vspace{0.1in}
 $\bullet$ homozygous:
 Alternative forms of a given gene are called alleles, and they can be dominant or recessive. When an individual has two of the same allele, whether dominant or recessive, they are homozygous.
 
+
 \vspace{0.1in}
 $\bullet$ recessive:
  The terms dominant and recessive describe the inheritance patterns of certain traits. For a recessive allele to produce a recessive phenotype, the individual must have two copies, one from each parent. An individual with one dominant and one recessive allele for a gene will have the dominant phenotype. They are generally considered “carriers” of the recessive allele: the recessive allele is there, but the recessive phenotype is not.
+
 
 \vspace{0.1in}
 $\bullet$ dominant:
 The terms dominant and recessive describe the inheritance patterns of certain traits. A dominant allele produces a dominant phenotype in individuals who have one copy of the allele, which can come from just one parent.
 
+
 \vspace{0.1in}
 $\bullet$ allele:
 An allele is one of the possible forms of a gene. Most genes have two alleles, a dominant allele and a recessive allele. If an organism is heterozygous for that trait, or possesses one of each allele, then the dominant trait is expressed.
+
 
 \vspace{0.1in}
 $\bullet$ complex trait:
 Complex traits are believed to result from variation within multiple genes and their interaction with behavioral and environmental factors. Complex traits do not follow readily predictable patterns of inheritance.
 
+
 \vspace{0.1in}
 $\bullet$ full penetrance:
  "Complete" or Full penetrance means the gene or genes for a trait are expressed in all the population who have the genes. "Incomplete" penetrance means the genetic trait is expressed in only part of the population.
+
 
 \vspace{0.1in}
 $\bullet$ proband:
 "Proband", "proposito" (male proband), or "proposita" (female proband) is a term used most often in medical genetics and other medical fields to denote a particular subject (person or animal) being studied or reported on.
 
+
 \vspace{0.1in}
 $\bullet$ phenotype:
 A phenotype is an individual's observable traits, such as height, eye color, and blood type. The genetic contribution to the phenotype is called the genotype. Some traits are largely determined by the genotype, while other traits are largely determined by environmental factors
+
 
 \vspace{0.1in}
 $\bullet$ autosomes:
 An autosome is any chromosome that is not a sex-determining chromosome, so most chromosomes are autosomes.
 
+
 \vspace{0.1in}
 $\bullet$ homologous chromosomes:
 One chromosome of each homologous pair comes from the mother (called a maternal chromosome) and one comes from the father (paternal chromsosome). Homologous chromosomes are similiar but not identical. Each carries the same genes in the same order, but the alleles for each trait may not be the same.
+
 
 \vspace{0.1in}
 $\bullet$ centromere:
 The centromere is the part of a chromosome that links sister chromatids or a dyad. During mitosis, spindle fibers attach to the centromere via the kinetochore. 
 
+
 \vspace{0.1in}
 $\bullet$ gene:
 A gene is a locus (or region) of DNA that encodes a functional RNA or protein product, and is the molecular unit of heredity.A gene is a locus (or region) of DNA that encodes a functional RNA or protein product, and is the molecular unit of heredity.
+
 
 \vspace{0.1in}
 $\bullet$ exon:
 An exon is any part of a gene that will become a part of the final mature RNA produced by that gene after introns have been removed by RNA splicing. The term exon refers to both the DNA sequence within a gene and to the corresponding sequence in RNA transcripts.
 
+
 \vspace{0.1in}
 $\bullet$ intron:
 Introns are noncoding sections of an RNA transcript, or the DNA encoding it, that are spliced out before the RNA molecule is translated into a protein. The sections of DNA (or RNA) that code for proteins are called exons.
+
 
 \vspace{0.1in}
 $\bullet$ mutation:
 In biology, a mutation is a permanent alteration of the nucleotide sequence of the genome of an organism, virus, or extrachromosomal DNA or other genetic elements.
 
+
 \vspace{0.1in}
 $\bullet$ splice site:
 the specific site at which splicing takes place during the processing of precursor messenger RNA into mature messenger RNA.
+
 
 \vspace{0.1in}
 $\bullet$ SNP:
 A single nucleotide polymorphism, often abbreviated to SNP (pronounced snip; plural snips), is a variation in a single nucleotide that occurs at a specific position in the genome, where each variation is present to some appreciable degree within a population (e.g. >1%).
 
+
 \vspace{0.1in}
 $\bullet$ SNV:
 A single nucleotide variation is just a variation in a single nucleotide without any limitations of frequency. 
+
 
 \vspace{0.1in}
 $\bullet$ somatic mutation:
 Somatic mutation, genetic alteration acquired by a cell that can be passed to the progeny of the mutated cell in the course of cell division. Somatic mutations differ from germ line mutations, which are inherited genetic alterations that occur in the germ cells (i.e., sperm and eggs).
 
+
 \vspace{0.1in}
 $\bullet$ germ-line mutation:
 A germline mutation is any detectable and heritable variation in the lineage of germ cells. Mutations in these cells are transmitted to offspring, while, on the other hand, those in somatic cells are not.
+
 
 \vspace{0.1in}
 $\bullet$ de novo variant:
 An alteration in a gene that is present for the first time in one family member as a result of a mutation in a germ cell (egg or sperm) of one of the parents or in the fertilized egg itself
 
+
 \vspace{0.1in}
 $\bullet$ ascertainment:
 In epidemiologic and genetic research, the method by which a person, pedigree, or cluster is brought to the attention of an investigator; ascertainment has a bearing on the interpretation of segregation ratios, concordance rates, linkage analysis, and other probability features.
 
+
 \vspace{0.1in}
 $\bullet$ germline mutation:
+A germline mutation is any detectable and heritable variation in the lineage of germ cells. Mutations in these cells are transmitted to offspring, while, on the other hand, those in somatic cells are not.
 
 
 \vspace{0.1in}
 $\bullet$ VNTRs:
 A variable number tandem repeat (or VNTR) is a location in a genome where a short nucleotide sequence is organized as a tandem repeat. These can be found on many chromosomes, and often show variations in length between individuals.
 
+
 \vspace{0.1in}
 $\bullet$ indel:
 An insertion/deletion polymorphism, commonly abbreviated “indel,” is a type of genetic variation in which a specific nucleotide sequence is present (insertion) or absent (deletion). While not as common as SNPs, indels are widely spread across the genome.
+
 
 \vspace{0.1in}
 $\bullet$ structural variants:
 Structural variation (SV) is generally defined as a region of DNA approximately 1 kb and larger in size and can include inversions and balanced translocations or genomic imbalances (insertions and deletions), commonly referred to as copy number variants (CNVs)
 
+
 \vspace{0.1in}
 $\bullet$ codon:
 a sequence of three nucleotides that together form a unit of genetic code in a DNA or RNA molecule.
+
 
 \vspace{0.1in}
 $\bullet$ synonymous/nonsynonymous variant:
 synonymous variant is the evolutionary substitution of one base for another in an exon of a gene coding for a protein, such that the produced amino acid sequence is not modified.
 A nonsynonymous variant is a nucleotide mutation that alters the amino acid sequence of a protein.
 
+
 \vspace{0.1in}
 $\bullet$ missense mutation:
 In genetics, a missense mutation is a point mutation in which a single nucleotide change results in a codon that codes for a different amino acid. It is a type of nonsynonymous substitution.
+
 
 \vspace{0.1in}
 $\bullet$ nonsense mutation:
 In genetics, a nonsense mutation is a point mutation in a sequence of DNA that results in a premature stop codon, or a nonsense codon in the transcribed mRNA, and in a truncated, incomplete, and usually nonfunctional protein product.
 
+
 \vspace{0.1in}
 $\bullet$ silent mutation:
 Silent mutations are mutations in DNA that do not significantly alter the phenotype of the organism in which they occur. Silent mutations can occur in non-coding regions (outside of genes or within introns), or they may occur within exons.
+
 
 \vspace{0.1in}
 $\bullet$ Medelian transmission:
 Mendelian inheritance is inheritance of biological features that follows the laws proposed by Gregor Johann Mendel.
 
+
 \vspace{0.1in}
 $\bullet$ Medelian transmission:
+
 
 \vspace{0.1in}
 $\bullet$ genetic model:
@@ -188,11 +228,13 @@ Some analyses of genetic data; ideas on how genes work in individuals to affect 
 Genetic Models specifically relate genotype to phenotype.
 From the TEXT: A genetic model specifies a probability distribution for the trait, conditional on the underlying genotype at the hypothesized disease locus.
 
+
 \vspace{0.1in}
 $\bullet$ aggregation analyses:
 Aggregation Analysis (for dichotomous traits): By estimating the correlation or
 similarity of a phenotype among family members, one can assess whether a phenotype
 aggregates in families.
+
 
 \vspace{0.1in}
 $\bullet$ chromatids:
@@ -203,17 +245,21 @@ A chromatid, is one copy of a newly copied chromosome which is still joined to t
 $\bullet$ chiasma:
 A chiasma (plural: chiasmata), in genetics, is thought to be the point where two homologous non-sister chromatids exchange genetic material during chromosomal crossover during meiosis (sister chromatids also form chiasmata between each other (also known as a chi structure), but because their genetic material is identical, it does not cause any change in the resulting daughter cells). 
 
+
 \vspace{0.1in}
 $\bullet$ meiosis:
 Meiosis is a process where a single cell divides twice to produce four cells containing half the original amount of genetic information. These cells are our sex cells – sperm in males, eggs in females.
+
 
 \vspace{0.1in}
 $\bullet$ mitosis:
 Mitosis is a part of the cell cycle in which chromosomes in a cell nucleus are separated into two identical sets of chromosomes, and each set ends up in its own nucleus.
 
+
 \vspace{0.1in}
 $\bullet$ diploid:
 of a cell or nucleus) containing two complete sets of chromosomes, one from each parent
+
 
 \vspace{0.1in}
 $\bullet$ haploid:
@@ -223,6 +269,7 @@ Haploid cells are a result of the process of meiosis. Haploid cells have half th
 $\bullet$ gametes:
 a mature haploid male or female germ cell that is able to unite with another of the opposite sex in sexual reproduction to form a zygote.
 
+
 \vspace{0.1in}
 $\bullet$ zygote:
  Zygote is a eukaryotic cell formed by a fertilization event between two gametes. The zygote's genome is a combination of the DNA in each gamete, and contains all of the genetic information necessary to form a new individual.
@@ -231,25 +278,31 @@ $\bullet$ zygote:
 $\bullet$ tetrad:
 A group of four chromatids formed from each of a pair of homologous chromosomes that split longitudinally during the prophase of meiosis.
 
+
 \vspace{0.1in}
 $\bullet$ interference:
  the crossovers in adjacent chromosome regions independent or does a crossover in one region affect the likelihood of there being a crossover in an adjacent region. It turns out that often they are not independent: the interaction is called interference.
+
 
 \vspace{0.1in}
 $\bullet$ obligatory crossover:
 The obligate crossover refers to the fact that, in most species, it is rare to find chromosomes that do not undergo crossing-over.
 
+
 \vspace{0.1in}
 $\bullet$ recombination:
 the rearrangement of genetic material, especially by crossing over in chromosomes or by the artificial joining of segments of DNA from different organisms.
+
 
 \vspace{0.1in}
 $\bullet$ population genetics:
 Population genetics is the study of the distribution and change in frequency of alleles within populations, and as such it sits firmly within the field of evolutionary biology.
 
+
 \vspace{0.1in}
 $\bullet$ genetic epidemiology:
  the study of the role of genetic factors in determining health and disease in families and in populations, and the interplay of such genetic factors with environmental factors. Genetic epidemiology seeks to derive a statistical and quantitive analysis of how genetics work in large groups.
+ 
 
 \vspace{0.1in}
 $\bullet$ mode of inheritance:
@@ -267,6 +320,7 @@ where $P_0$ is the probability of zero crossovers.
 \vspace{0.1in}
 $\bullet$ Heterozygote advantage:
 A heterozygote advantage (heterozygous advantage) describes the case in which the heterozygote genotype has a higher relative fitness than either the homozygote dominant or homozygote recessive genotype. The specific case of heterozygote advantage due to a single locus is known as overdominance.
+
 
 \vspace{0.1in}
 $\bullet$ recombination fraction:
@@ -320,9 +374,9 @@ The Hardy–Weinberg principle, also known as the Hardy–Weinberg equilibrium, 
  \[
     P(Genotype Frequency)\left\{
                 \begin{array}{ll}
-                  P(AA genotype) = p^{2}\\
-                  P(Aa genotype) = 2pq\\
-                  p(aa genotype) = q^{2}
+                  P(AA - genotype) = p^{2}\\
+                  P(Aa - genotype) = 2pq\\
+                  p(aa - genotype) = q^{2}
                 \end{array}
               \right.
   \]
@@ -334,7 +388,7 @@ Loss of heterozygosity (LOH) is a common genetic event in cancer development, an
 
 \vspace{1pc}
 $\bullet$ population structure:
-
+population structure, population geneticists mean that, instead of a single, simple population, populations are subdivided in some way.
 
 \vspace{1pc}
 $\bullet$ population stratification:
