--- a/MidTerm.tex
+++ b/MidTerm.tex
@@ -139,7 +139,7 @@ the specific site at which splicing takes place during the processing of precurs
 
 \vspace{0.1in}
 $\bullet$ SNP:
-A single nucleotide polymorphism, often abbreviated to SNP (pronounced snip; plural snips), is a variation in a single nucleotide that occurs at a specific position in the genome, where each variation is present to some appreciable degree within a population (e.g. >1%).
+A single nucleotide polymorphism, often abbreviated to SNP (pronounced snip; plural snips), is a variation in a single nucleotide that occurs at a specific position in the genome, where each variation is present to some appreciable degree within a population (e.g. $ >1\% $).
 
 
 \vspace{0.1in}
