add compling files for MidTerm.pdf

--- a/MidTerm.tex
+++ b/MidTerm.tex
@@ -9,7 +9,7 @@
 
 \centerline{\sc \large BioStats 710 MidTerm}
 \vspace{1pc}
-\centerline{\sc Some Stuff I Wish Would be Useful}
+\centerline{\sc 03-07-2016}
 \vspace{1pc}
 
 \centerline{\it (Chapter one through Chapter 4)}
@@ -603,7 +603,7 @@ the genetic model that describes the data ‘best’.
 		here \mu_1 and \mu_2 ~ Binomail(0, p)												\\		\\	
 		E(Y_1 * Y_2) = \sum_{y_1}^{}\sum_{y_2}^{} y_1*y_2*P(Y_1, Y_2) 						\\
 		= P(Y_1 = 1, Y_2 = 1) - \sum_{y_1}^{max}y_1*P(Y_1) * \sum_{y_2}{}y_2*P(Y_2)			\\
-					Only \quad when \quad y_1 = 1 \quad or \quad y_2 = 1 \quad could \quad count		\\			\\
+					Only \quad when \quad y_1 = 1 \quad or \quad y_2 = 1 \quad could \quad count		\\	\\
 		= P(Y_1 = 1, Y_2 = 1) - P(Y_1)P(Y_2)												\\
 		= P(Y_1 = Y_2 = 1) - K^2	
 	$	
