update midterm.tex doc

--- a/MidTerm.tex
+++ b/MidTerm.tex
@@ -23,14 +23,16 @@
 \vspace{0.2in}
 
 $\bullet$ trait: 
-a genetically determined characteristic; A trait is a notable feature or quality in a person. Each of us has a different combination of traits that makes us unique. 
-Traits are passed from generation to generation.\vspace{0.1in}
+Also called phenotype, a genetically determined individual characteristic not observed at molecular level; A trait is a notable feature or quality in a person. Traits are passed from generation to generation.
 
 
+\vspace{0.1in}
 $\bullet$ genetic marker: 
-A genetic marker is a gene or DNA sequence with a known location on a chromosome that can be used to identify individuals or species. It can be described as a variation (which may arise due to mutation or alteration in the genomic loci) that can be observed. \vspace{0.1in}
+A genetic marker is a gene or DNA sequence with a known location on a chromosome that can be measureed reliably. 
+To identify individuals or species. It can be described as gene variants (which may arise due to mutation or alteration in the genomic loci) that can be observed. 
 
 
+\vspace{0.1in}
 $\bullet$ linkage analysis: 
 Study aimed at establishing linkage between genes. Today linkage analysis serves as a way of gene-hunting and genetic testing. Linkage is the tendency for genes and other genetic markers to be inherited together because of their location near one another on the same chromosome.
 
