update midterm.tex doc

--- a/MidTerm.tex
+++ b/MidTerm.tex
@@ -7,9 +7,15 @@
 
 
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% Chapter One
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \centerline{\sc \large BioStats 710 MidTerm}
 \vspace{1pc}
-\centerline{\sc 03-07-2016}
+\centerline{\sc 03-08-2016}
 \vspace{1pc}
 
 \centerline{\it (Chapter one through Chapter 4)}
@@ -19,7 +25,7 @@
 \vspace{2pc}
 
 
-\centerline{\sc Chapter One}
+\centerline{\sc Chapter One and Chapter Two}
 \vspace{0.2in}
 
 $\bullet$ trait: 
@@ -28,28 +34,30 @@ Also called phenotype, a genetically determined individual characteristic not ob
 
 \vspace{0.1in}
 $\bullet$ genetic marker: 
-A genetic marker is a gene or DNA sequence with a known location on a chromosome that can be measureed reliably. 
-To identify individuals or species. It can be described as gene variants (which may arise due to mutation or alteration in the genomic loci) that can be observed. 
+A genetic marker is a gene or DNA sequence with a known location on a chromosome that can be measured reliably. 
+
 
 
 \vspace{0.1in}
 $\bullet$ linkage analysis: 
-Study aimed at establishing linkage between genes. Today linkage analysis serves as a way of gene-hunting and genetic testing. Linkage is the tendency for genes and other genetic markers to be inherited together because of their location near one another on the same chromosome.
+Aimed at establishing linkage between genes and disease.
+study patterns of inheritance of genetic markers of disease (phenotype) to infer genetic distance between marker and disease genes.
 
 
 \vspace{0.1in}
 $\bullet$ Mendelian disorder: 
-a genetic disease, showing a mendelian pattern of inheritance, and caused by a single mutation in the structure of DNA, which causes a single basic defect that has some pathological consequence or consequences.
+Disease or disorders which are initiated by variants in a single gene.
+A genetic disease, showing a mendelian pattern of inheritance, and caused by a single mutation in the structure of DNA, which causes a single basic defect that has some pathological consequence or consequences.
 
 
 \vspace{0.1in}
-$\bullet$ penetrance: 
+$\bullet$ Penetrance: 
 Penetrance in genetics is the proportion of individuals carrying a particular variant of a gene (allele or genotype) that also expresses an associated trait (phenotype)
 
 
 \vspace{0.1in}
 $\bullet$ heterozygote: 
-an individual having two different alleles of a particular gene or genes, and so giving rise to varying offspring.
+An individual having two different alleles of a particular gene or genes, 'A' and 'a' as a pair, and so giving rise to varying offspring.
 
 
 \vspace{0.1in}
@@ -64,7 +72,7 @@ Gene mapping describes the methods used to identify the locus of a gene and the 
 
 \vspace{0.1in}
 $\bullet$ homozygous:
-Alternative forms of a given gene are called alleles, and they can be dominant or recessive. When an individual has two of the same allele, whether dominant or recessive, they are homozygous.
+Alternative forms of a given gene are called alleles, and they can be dominant or recessive. When an individual has two of the same allele, whether dominant or recessive, they are homozygous, 'AA' or 'aa'.
 
 
 \vspace{0.1in}
@@ -74,7 +82,7 @@ $\bullet$ recessive:
 
 \vspace{0.1in}
 $\bullet$ dominant:
-The terms dominant and recessive describe the inheritance patterns of certain traits. A dominant allele produces a dominant phenotype in individuals who have one copy of the allele, which can come from just one parent.
+The terms dominant and recessive describe the inheritance patterns of certain traits. A dominant allele produces a dominant phenotype in individuals who have one copy (or two copies) of the allele, which can come from just one parent.
 
 
 \vspace{0.1in}
@@ -364,10 +372,10 @@ Some genes are located on the same chromosome, thus the lack of independent tran
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Chapter Two
+%% Chapter Three
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
-\centerline{\sc Chapter Two}
+\centerline{\sc Chapter Three}
 
 
 \vspace{1pc}
@@ -455,7 +463,7 @@ population genotype frequencies
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Chapter Three
+%% Chapter Four
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newpage
 \centerline{\sc Chapter Three}
