update midterm.tex doc

--- a/MidTerm.tex
+++ b/MidTerm.tex
@@ -103,7 +103,7 @@ $\bullet$ full penetrance:
 \vspace{0.1in}
 $\bullet$ proband:
 "Proband", "proposito" (male proband), or "proposita" (female proband) is a term used most often in medical genetics and other medical fields to denote a particular subject (person or animal) being studied or reported on.
-
+Family samples with at least one individual affected. 
 
 \vspace{0.1in}
 $\bullet$ phenotype:
@@ -230,9 +230,6 @@ Silent mutations are mutations in DNA that do not significantly alter the phenot
 $\bullet$ Medelian transmission:
 Mendelian inheritance is inheritance of biological features that follows the laws proposed by Gregor Johann Mendel.
 
-
-\vspace{0.1in}
-$\bullet$ Medelian transmission:
 
 
 \vspace{0.1in}
@@ -551,18 +548,9 @@ where G is the genotypic value of all loci considered together, A is sum of all 
 
 \vspace{1pc}
 $\bullet$ breeding values:
-An individuals breeding value can also be An individuals breeding value can also be
-described as the described as the sum of the average effect sum of the average effect of the
-individuals alleles.
-
-For example, if an A1 allele is worth +5 and For example, if an A1 allele is worth +5 and
-an A2 allele is worth an A2 allele is worth
--2, then an A1A2 2, then an A1A2
-heterozygote has a breeding value of 3. heterozygote has a breeding value of 3.
-
-Breeding values are expressed as a deviation of the Breeding values are expressed as a deviation of the
-population mean (with the population mean population mean (with the population mean
-dependent on genotypic values and frequencies)
+An individuals breeding value can also be described as the sum of the average effect of the individuals alleles.
+For example, if an A1 allele is worth +5 and an A2 allele is worth -2, then an A1A2 heterozygote has a breeding value of 3.
+Breeding values are expressed as a deviation of the population mean (with the population mean dependent on genotypic values and frequencies)
 
 
 \vspace{1pc}
